--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: snorf
 version: '1.0.0'
 main: jinzo.snorf.Snorf
 api-version: '1.21'
+commands:
+    s:
+      description: Base command for Snorf
+      usage: /s <subcommand>
