--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,11 @@
-name: snorf
+name: Snorf
 version: '1.0.0'
 main: jinzo.snorf.Snorf
 api-version: '1.21'
+folia-supported: true
 commands:
-    s:
-      description: Base command for Snorf
-      usage: /s <subcommand>
+  s:
+    description: Base command for Snorf
+    usage: /s <subcommand>
+    aliases: []
+    permission-message: You do not have permission to use this command.
