Rename plugin & minor command changes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,16 @@
-name: Snorf
+name: Terranite
 version: '1.0.0'
-main: jinzo.snorf.Snorf
+main: jinzo.terranite.Terranite
 api-version: '1.21'
 folia-supported: true
 commands:
   s:
-    description: Base command for Snorf
+    description: Base command for Terranite
     usage: /s <subcommand>
-    aliases: []
+    aliases: [terra, terranite, selection]
+    permission: terranite.use
     permission-message: You do not have permission to use this command.
+permissions:
+  terranite.use:
+    description: Allows use of the Terranite base command and its aliases
+    default: op
