Move command added

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -102,6 +102,10 @@ commands:
     aliases: [schematic]
     permission: terranite.use
     permission-message: You do not have permission to use this command.
+  "/move":
+    description: Move selection command
+    permission: terranite.use
+    permission-message: You do not have permission to use this command.
 permissions:
   terranite.use:
     description: Allows use of the Terranite base command and its aliases
