#preview ghostblocks when block modifying part 1

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -106,6 +106,14 @@ commands:
     description: Move selection command
     permission: terranite.use
     permission-message: You do not have permission to use this command.
+  "/apply":
+    description: Apply selection command
+    permission: terranite.use
+    permission-message: You do not have permission to use this command.
+  "/cancel":
+    description: Cancel selection command
+    permission: terranite.use
+    permission-message: You do not have permission to use this command.
 permissions:
   terranite.use:
     description: Allows use of the Terranite base command and its aliases
