Coreprotect v1 - Basic logging

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -106,6 +106,10 @@ commands:
     description: Move selection command
     permission: terranite.use
     permission-message: You do not have permission to use this command.
+  "/mask":
+    description: Mask command for //fill
+    permission: terranite.use
+    permission-message: You do not have permission to use this command.
   "/apply":
     description: Apply selection command
     permission: terranite.use
